tests/baselines/reference/cloduleSplitAcrossFiles.errors.txt
cloduleSplitAcrossFiles_module.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
cloduleSplitAcrossFiles_module.ts(1,8): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.


==== cloduleSplitAcrossFiles_class.ts (0 errors) ====
    class D { }
    
==== cloduleSplitAcrossFiles_module.ts (2 errors) ====
    module D {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
           ~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
        export var y = "hi";
    }
    D.y;